# procnote

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  CLAUDE.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_RESOLUTION.md  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  renovate.json5  zensical.toml
.cargo/: config.toml
.github/workflows/: docs.yaml  lint-frontend.yaml  lint-rust.yaml  release.yaml  update-homebrew.yaml
crates/procnote-cli/: Cargo.toml
crates/procnote-core/: Cargo.toml
crates/procnote-core/src/: lib.rs  snapshot.rs
crates/procnote-core/src/event/: log.rs  mod.rs  types.rs
crates/procnote-core/src/execution/: engine.rs
crates/procnote-core/src/template/: parser.rs  types.rs
crates/procnote-core/tests/: fixture_tests.rs  minimal_json_tests.rs
crates/procnote-core/tests/fixtures/: v1_all_event_types.jsonl  v1_basic_execution.jsonl  v1_with_reverts.jsonl  v2_all_event_types.jsonl  v2_basic_execution.jsonl  v2_with_reversal_actions.jsonl
crates/procnote-launcher/: Cargo.toml
crates/procnote-launcher/src/: lib.rs  main.rs
crates/procnote-launcher/tests/: cli.rs
docs/: index.md
docs/concepts/: crash-safety.md  executions-and-events.md  index.md  templates.md
docs/guide/: drop-point.md  index.md  running-an-execution.md  writing-a-template.md
procedures/example-tvt/: template.md
procedures/table-rendering/: template.md
scripts/: prepare-launcher.mjs  tauri.mjs  validate-linux-package.sh  validate-macos-package.sh  validate-windows-package.ps1
src-tauri/: Cargo.toml  tauri.bundle.linux.conf.json  tauri.bundle.macos.conf.json  tauri.bundle.windows.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/launchers/: README.md
src-tauri/launchers/linux/: procnote
src-tauri/launchers/macos/: procnote
src-tauri/launchers/windows/: procnote.cmd
src-tauri/nsis/: hooks.nsh  update-user-path.ps1
src-tauri/src/: action.rs  lib.rs  main.rs  path_security.rs  state.rs
src-tauri/src/commands/: drop_point.rs  execution.rs  mod.rs  template.rs
src-tauri/src/drop_point/: client.rs  crypto.rs  manifest.rs  mod.rs  multipart.rs  secure_fs.rs  session.rs  storage.rs
src-tauri/src/persistence/: attachment_store.rs  event_log.rs  execution_store.rs  mod.rs
src-tauri/testdata/drop_point/: filename-policy.json  protocol-parsing-policy.json
src/lib/api/: commands.ts
src/lib/components/: AddStepDialog.svelte  AttachmentField.svelte  CheckboxItem.svelte  InputField.svelte  NoteEditor.svelte  StepCard.svelte
src/lib/stores/: execution.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: format.ts  keyboard.ts  mime.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/execution/[id]/: +page.svelte
