[workspace]
resolver = "3"
members = ["crates/procnote-cli", "crates/procnote-core", "src-tauri"]

[workspace.package]
version = "0.0.3"
description = "Event-sourced desktop app for tracking step-by-step procedures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shunichironomura/procnote"
readme = "README.md"
keywords = ["procedure", "checklist", "event-sourcing", "tauri"]
categories = ["command-line-utilities"]

[workspace.dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
log = "0.4"
names = { version = "0.14.0", default-features = false }
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
sha2 = "0.11.0"
tauri = { version = "2.9.5", features = [] }
tauri-build = { version = "2.5.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.3"
tempfile = "3.24.0"
procnote-tauri = { path = "src-tauri" }
thiserror = "2.0.18"
ts-rs = { version = "12.0.1", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }

[workspace.lints.clippy]
all = "warn"
correctness = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Specific overrides
allow_attributes = { level = "warn", priority = 1 }
allow_attributes_without_reason = { level = "warn", priority = 1 }
dbg_macro = { level = "warn", priority = 1 }
decimal_literal_representation = { level = "warn", priority = 1 }
derive_partial_eq_without_eq = { level = "allow", priority = 1 }
else_if_without_else = { level = "warn", priority = 1 }
expect_used = { level = "allow", priority = 1 }
indexing_slicing = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
cargo_common_metadata = { level = "warn", priority = 1 }
panic = { level = "allow", priority = 1 }
print_stderr = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
undocumented_unsafe_blocks = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }

[workspace.lints.rust]
unsafe-code = "warn"
