[package]
name = "procnote-tauri"
# Version not tracked here; see src-tauri/tauri.conf.json for the release version.
version = "0.0.0"
edition = "2024"
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "procnote"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "procnote_tauri_lib"

[dependencies]
chrono.workspace = true
clap.workspace = true
log.workspace = true
procnote-core = { path = "../crates/procnote-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-opener.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
uuid.workspace = true

[build-dependencies]
tauri-build.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
