[package]
name = "procnote-tauri"
# Version not tracked here; see src-tauri/tauri.conf.json for the release version.
version = "0.0.0"
edition = "2024"
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "procnote"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "procnote_tauri_lib"

[dependencies]
aes-gcm = "0.11.0"
base64 = "0.22.1"
chrono.workspace = true
clap.workspace = true
fs2 = "0.4.3"
hkdf = "0.13.0"
log.workspace = true
mailparse = "0.16.1"
procnote-core = { path = "../crates/procnote-core" }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle = "2.6.1"
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-opener.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
url = "2.5.8"
uuid.workspace = true
x25519-dalek = { version = "3.0.0", features = ["static_secrets", "getrandom"] }
zeroize = "1.9.0"

[build-dependencies]
tauri-build.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
