[package]
name = "procnote-cli"
version.workspace = true
edition = "2024"
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "procnote"
path = "src/main.rs"
doc = false

[dependencies]
procnote-tauri.workspace = true

[lints]
workspace = true
