[package]
name = "procnote-launcher"
edition = "2024"
version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[target."cfg(unix)".dependencies]
libc = "0.2.186"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }

[dev-dependencies]
tempfile.workspace = true
